@@ -1,3 +1,7 @@
+2018-10-18
+
+- Searcher for requests and complains were added.
+
 2016-09-27
 
 - Option to attach documents in cases, requests and complais was added
